--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,1 @@
-<header class="site-header" role="banner">
-  <!--span class="site-title" rel="author">{{ site.title | escape }}</span-->
-</header>
+<header></header>
